# squeezer-project

./: .coveragerc  .gitignore  .mcp.json  AGENTS.md  COMPETITIVE_ANALYSIS.md  Claude.md  Dockerfile.mcp  MCP_SERVER.md  README.md  VERIFICATION_REPORT.md  docker-compose.mcp.yml  katana.txt  prompts.md  pyproject.toml  report-final.html  report-fixed.html  report.html  report.tex  results.json  results2.json  run-nuclei.sh  ssrf-test.json  test.yaml
app_data/: userConfig.json
app_data/exports/: 40c83023-86ca-4314-b835-613b1834e5af.pptx
config/: juice-shop.yaml
configs/: README.md
configs/examples/: dvwa.yaml  educacion-us-es.yaml  esenziaclub.yaml  juice-shop.yaml  template.yaml
dast/: __init__.py  agent_crawler.py  auth.py  bridge.py  cli.py  config.py  crawler.py  docker.py  engine.py  extractors.py  jwt.py  katana_crawler.py  matchers.py  mcp_server.py  merger.py  scaffolder.py  utils.py  validators.py
dast/analyzer/: __init__.py  classifier.py  parameter_analyzer.py  (+1 more)
docs/: architecture.md  benchmark-katana-nuclei.md  benchmark-nuclei.md  design-decisions.md  prompt-log.md  prompts.md  scan-results.md
exploitation-results/: JUICE_SHOP_EXPLOITATION_RESULTS.md  TEMPLATE_VARIABLES_REFERENCE.md
payloads/: README.md  command-injection.txt
results/: sensitive-check-v2.json
squeezer/: __init__.py  auth.py  cli.py  crawler.py  docker.py  endpoint_matcher.py  jwt_utils.py  matchers.py  models.py  report.py  scaffolder.py  scanner.py  utils.py
templates/: README.md  TAXONOMY.md  TEST_RESULTS.md  info-disclosure.yaml  jwt-none.yaml  sql-injection.yaml
(+203 files in other folders)
