[project]
name = "dast-mvp"
version = "0.1.0"
description = "Minimal template-based DAST framework with Katana crawler"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.scripts]
dast = "dast.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["dast"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
