[project]
name = "dast-mvp"
version = "0.1.0"
description = "Minimal template-based DAST framework with Katana crawler"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "selectolax>=0.3.0",
    "tenacity>=8.0.0",
]

[project.scripts]
dast = "dast.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["dast"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
